@@ -59,7 +59,7 @@ import org.apache.solr.client.solrj.io.stream.expr.Expressible;
 import org.apache.solr.cloud.RecoveryStrategy;
 import org.apache.solr.cloud.ZkSolrResourceLoader;
 import org.apache.solr.common.ConfigNode;
-import org.apache.solr.common.MapSerializable;
+import org.apache.solr.common.MapWriter;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrException.ErrorCode;
 import org.apache.solr.common.util.IOUtils;
@@ -96,7 +96,7 @@ import org.slf4j.LoggerFactory;
  * Provides a static reference to a Config object modeling the main configuration data for a Solr
  * core -- typically found in "solrconfig.xml".
  */
-public class SolrConfig implements MapSerializable {
+public class SolrConfig implements MapWriter {
 
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
@@ -685,23 +685,17 @@ public class SolrConfig implements MapSerializable {
     return httpCachingConfig;
   }
 
-  public static class HttpCachingConfig implements MapSerializable {
+  public static class HttpCachingConfig implements MapWriter {
 
     /** For extracting Expires "ttl" from <cacheControl> config */
     private static final Pattern MAX_AGE = Pattern.compile("\\bmax-age=(\\d+)");
 
     @Override
-    public Map<String, Object> toMap(Map<String, Object> map) {
-      // Could have nulls
-      return Utils.makeMap(
-          "never304",
-          never304,
-          "etagSeed",
-          etagSeed,
-          "lastModFrom",
-          lastModFrom.name().toLowerCase(Locale.ROOT),
-          "cacheControl",
-          cacheControlHeader);
+    public void writeMap(EntryWriter ew) throws IOException {
+      ew.put("never304", never304)
+          .put("etagSeed", etagSeed)
+          .put("lastModFrom", lastModFrom.name().toLowerCase(Locale.ROOT))
+          .put("cacheControl", cacheControlHeader);
     }
 
     public enum LastModFrom {
@@ -783,7 +777,7 @@ public class SolrConfig implements MapSerializable {
     }
   }
 
-  public static class UpdateHandlerInfo implements MapSerializable {
+  public static class UpdateHandlerInfo implements MapWriter {
     public final String className;
     public final int autoCommmitMaxDocs,
         autoCommmitMaxTime,
@@ -842,19 +836,18 @@ public class SolrConfig implements MapSerializable {
     }
 
     @Override
-    public Map<String, Object> toMap(Map<String, Object> map) {
-      map.put("commitWithin", Map.of("softCommit", commitWithinSoftCommit));
-      map.put(
+    public void writeMap(EntryWriter ew) throws IOException {
+      ew.put("commitWithin", Map.of("softCommit", commitWithinSoftCommit));
+      ew.put(
           "autoCommit",
           Map.of(
               "maxDocs", autoCommmitMaxDocs,
               "maxTime", autoCommmitMaxTime,
               "openSearcher", openSearcher));
-      map.put(
+      ew.put(
           "autoSoftCommit",
           Map.of("maxDocs", autoSoftCommmitMaxDocs, "maxTime", autoSoftCommmitMaxTime));
-      map.put("commitPollInterval", commitPollInterval);
-      return map;
+      ew.put("commitPollInterval", commitPollInterval);
     }
   }
 
@@ -952,20 +945,34 @@ public class SolrConfig implements MapSerializable {
   }
 
   @Override
-  public Map<String, Object> toMap(Map<String, Object> result) {
-    if (znodeVersion > -1) result.put(ZNODEVER, znodeVersion);
-    if (luceneMatchVersion != null)
-      result.put(IndexSchema.LUCENE_MATCH_VERSION_PARAM, luceneMatchVersion.toString());
-    result.put("updateHandler", getUpdateHandlerInfo());
-    Map<String, Object> m = new LinkedHashMap<>();
-    result.put("query", m);
-    m.put("useFilterForSortedQuery", useFilterForSortedQuery);
-    m.put("queryResultWindowSize", queryResultWindowSize);
-    m.put("queryResultMaxDocsCached", queryResultMaxDocsCached);
-    m.put("enableLazyFieldLoading", enableLazyFieldLoading);
-    m.put("maxBooleanClauses", booleanQueryMaxClauseCount);
-    m.put(MIN_PREFIX_QUERY_TERM_LENGTH, prefixQueryMinPrefixLength);
+  public void writeMap(EntryWriter ew) throws IOException {
+    if (znodeVersion > -1) {
+      ew.put(ZNODEVER, znodeVersion);
+    }
+    if (luceneMatchVersion != null) {
+      ew.put(IndexSchema.LUCENE_MATCH_VERSION_PARAM, luceneMatchVersion.toString());
+    }
 
+    ew.put("updateHandler", getUpdateHandlerInfo());
+    ew.put(
+        "query",
+        (MapWriter)
+            m -> {
+              m.put("useFilterForSortedQuery", useFilterForSortedQuery);
+              m.put("queryResultWindowSize", queryResultWindowSize);
+              m.put("queryResultMaxDocsCached", queryResultMaxDocsCached);
+              m.put("enableLazyFieldLoading", enableLazyFieldLoading);
+              m.put("maxBooleanClauses", booleanQueryMaxClauseCount);
+              m.put(MIN_PREFIX_QUERY_TERM_LENGTH, prefixQueryMinPrefixLength);
+
+              addCacheConfig(
+                  m,
+                  filterCacheConfig,
+                  queryResultCacheConfig,
+                  documentCacheConfig,
+                  fieldValueCacheConfig,
+                  featureVectorCacheConfig);
+            });
     for (SolrPluginInfo plugin : plugins) {
       List<PluginInfo> infos = getPluginInfos(plugin.clazz.getName());
       if (infos == null || infos.isEmpty()) continue;
@@ -982,45 +989,46 @@ public class SolrConfig implements MapSerializable {
             overlay.getNamedPlugins(plugin.tag).entrySet()) {
           items.put(e.getKey(), e.getValue());
         }
-        result.put(tag, items);
+        ew.put(
+            tag,
+            (MapWriter)
+                m -> {
+                  for (Map.Entry<String, Object> item : items.entrySet()) {
+                    m.put(item.getKey(), item.getValue());
+                  }
+                });
       } else {
         if (plugin.options.contains(MULTI_OK)) {
-          ArrayList<MapSerializable> l = new ArrayList<>();
-          for (PluginInfo info : infos) l.add(info);
-          result.put(tag, l);
+          ew.put(tag, infos);
         } else {
-          result.put(tag, infos.get(0));
+          ew.put(tag, infos.getFirst());
         }
       }
     }
 
-    addCacheConfig(
-        m,
-        filterCacheConfig,
-        queryResultCacheConfig,
-        documentCacheConfig,
-        fieldValueCacheConfig,
-        featureVectorCacheConfig);
-    m = new LinkedHashMap<>();
-    result.put("requestDispatcher", m);
-    if (httpCachingConfig != null) m.put("httpCaching", httpCachingConfig);
-    m.put(
-        "requestParsers",
-        Map.of(
-            "multipartUploadLimitKB",
-            multipartUploadLimitKB,
-            "formUploadLimitKB",
-            formUploadLimitKB));
-    if (indexConfig != null) result.put("indexConfig", indexConfig);
-
-    // TODO there is more to add
-
-    return result;
+    ew.put(
+        "requestDispatcher",
+        (MapWriter)
+            m -> {
+              if (httpCachingConfig != null) m.put("httpCaching", httpCachingConfig);
+              m.put(
+                  "requestParsers",
+                  Map.of(
+                      "multipartUploadLimitKB",
+                      multipartUploadLimitKB,
+                      "formUploadLimitKB",
+                      formUploadLimitKB));
+            });
+    if (indexConfig != null) ew.put("indexConfig", indexConfig);
   }
 
-  private void addCacheConfig(Map<String, Object> queryMap, CacheConfig... cache) {
+  private void addCacheConfig(EntryWriter queryMap, CacheConfig... cache) throws IOException {
     if (cache == null) return;
-    for (CacheConfig config : cache) if (config != null) queryMap.put(config.getNodeName(), config);
+    for (CacheConfig cc : cache) {
+      if (cc != null) {
+        queryMap.put(cc.getNodeName(), cc);
+      }
+    }
   }
 
   public Properties getSubstituteProperties() {
